# Lemonade_Control_Center

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.host-telemetry.yaml  compose.yaml  install.sh
backend/: pyproject.toml  requirements.txt
backend/app/: capabilities.py  config.py  dependencies.py  frontend.py  main.py  run.py
backend/app/middleware/: access_control.py
backend/app/models/: backend_readiness.py  completions.py  intake.py  profiles.py  schemas.py  setup.py  telemetry.py
backend/app/providers/: base.py  lemonade.py  llamacpp.py  ollama.py
backend/app/routers/: bench.py  diagnostic.py  diagnostics.py  health.py  intake.py  lemonade.py  logs.py  metrics.py  profiles.py  security.py  settings.py  setup.py  system.py
backend/app/services/: backend_readiness.py  completion_runner.py  diagnostic_bundle.py  hardware.py  huggingface_intake.py  lemonade_options.py  log_parser.py  process.py  profile_service.py  run_evidence.py  runtime_registry.py  security.py  setup.py  telemetry.py
backend/app/services/bench/: __init__.py  models.py  runner.py  storage.py  suites.py
backend/tests/: test_api.py  test_backend_readiness.py  test_bench_runner.py  test_bench_storage.py  test_capabilities.py  test_completion_runner.py  test_diagnostic_bundle.py  test_diagnostic_rules.py  test_health.py  test_huggingface_intake.py  test_log_parser.py  test_packaging.py  test_profile_service.py  test_provider_utils.py  test_run_evidence.py  test_security.py  test_setup_service.py  test_telemetry.py
(+132 files in other folders)
